Mapear classes de entidade para tabelas de banco de dados + criar contexto de banco de dados + criar repositório de cursos

--- a/src/GestaoAcademica.Cursos.Domain/GestaoAcademica.Cursos.Domain.csproj
+++ b/src/GestaoAcademica.Cursos.Domain/GestaoAcademica.Cursos.Domain.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\GestaoAcademica.Core\GestaoAcademica.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
