--- a/src/GestaoAcademica.WebApi/GestaoAcademica.WebApi.csproj
+++ b/src/GestaoAcademica.WebApi/GestaoAcademica.WebApi.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\GestaoAcademica.Alunos.Domain\GestaoAcademica.Alunos.Domain.csproj" />
     <ProjectReference Include="..\GestaoAcademica.Core\GestaoAcademica.Core.csproj" />
     <ProjectReference Include="..\GestaoAcademica.Cursos.Data\GestaoAcademica.Cursos.Data.csproj" />
+    <ProjectReference Include="..\GestaoAcademica.Professores.Data\GestaoAcademica.Professores.Data.csproj" />
   </ItemGroup>
 
 </Project>
