--- a/src/GestaoAcademica.Cursos.Application/GestaoAcademica.Cursos.Application.csproj
+++ b/src/GestaoAcademica.Cursos.Application/GestaoAcademica.Cursos.Application.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.11.0" />
-    <PackageReference Include="MediatR" Version="12.4.1" />
+    <ProjectReference Include="..\GestaoAcademica.Core\GestaoAcademica.Core.csproj" />
+    <ProjectReference Include="..\GestaoAcademica.Cursos.Domain\GestaoAcademica.Cursos.Domain.csproj" />
   </ItemGroup>
 
 </Project>
