--- a/src/GestaoAcademica.WebApi/GestaoAcademica.WebApi.csproj
+++ b/src/GestaoAcademica.WebApi/GestaoAcademica.WebApi.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\GestaoAcademica.Core\GestaoAcademica.Core.csproj" />
     <ProjectReference Include="..\GestaoAcademica.Cursos.Application\GestaoAcademica.Cursos.Application.csproj" />
     <ProjectReference Include="..\GestaoAcademica.Cursos.Data\GestaoAcademica.Cursos.Data.csproj" />
+    <ProjectReference Include="..\GestaoAcademica.Professores.Application\GestaoAcademica.Professores.Application.csproj" />
     <ProjectReference Include="..\GestaoAcademica.Professores.Data\GestaoAcademica.Professores.Data.csproj" />
     <ProjectReference Include="..\GestaoAcademica.Turmas.Data\GestaoAcademica.Turmas.Data.csproj" />
   </ItemGroup>
