--- a/src/GestaoAcademica.Alunos.Application/GestaoAcademica.Alunos.Application.csproj
+++ b/src/GestaoAcademica.Alunos.Application/GestaoAcademica.Alunos.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GestaoAcademica.Alunos.Domain\GestaoAcademica.Alunos.Domain.csproj" />
+    <ProjectReference Include="..\GestaoAcademica.Core\GestaoAcademica.Core.csproj" />
+  </ItemGroup>
+
 </Project>
