--- a/src/GestaoAcademica.Alunos.Application/GestaoAcademica.Alunos.Application.csproj
+++ b/src/GestaoAcademica.Alunos.Application/GestaoAcademica.Alunos.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GestaoAcademica.Alunos.Domain\GestaoAcademica.Alunos.Domain.csproj" />
     <ProjectReference Include="..\GestaoAcademica.Core\GestaoAcademica.Core.csproj" />
   </ItemGroup>
