--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: InspectCode
 on:
   push:
     branches:
-      - main
+      - master
       - 'releases/*'
   pull_request:
     types: [opened, reopened]
