--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         # You may pin to the exact commit or the version.
         uses: JetBrains/ReSharper-InspectCode@v0.3
         with:
-          solution: ./YourSolution.sln
+          solution: ./GestaoAcademica.sln
 
     permissions:
       security-events: write
