--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,27 @@
-name: Lint
+name: InspectCode
 
-on: # yamllint disable-line rule:truthy
-  push: null
-  pull_request: null
-
-permissions: {}
-
+on:
+  push:
+    branches:
+      - master
+      - 'releases/*'
+  pull_request:
+    types: [opened, reopened]
+  workflow_dispatch:
+  
 jobs:
-  build:
-    name: Lint
+  inspect-code:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: Annotate
+        # You may pin to the exact commit or the version.
+        uses: JetBrains/ReSharper-InspectCode@v0.3
+        with:
+          solution: ./YourSolution.sln
 
     permissions:
-      contents: read
-      packages: read
-      # To report GitHub Actions status checks
-      statuses: write
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          # super-linter needs the full git history to get the
-          # list of files that changed across commits
-          fetch-depth: 0
-
-      - name: Super-linter
-        uses: super-linter/super-linter@v7.3.0 # x-release-please-version
-        env:
-          # To report GitHub Actions status checks
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      security-events: write
